force-app/main/default/objects/Street_Address__c/Street_Address__c.object-meta.xml
<CustomObject>
    <label>Street Address</label>
    <nameField>
        <label>Street Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Street Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>