force-app/main/default/objects/Street_Address__c/fields/Donors__c.field-meta.xml
<CustomField>
    <fullName>Donors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donors</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Street Address</relationshipLabel>
    <relationshipName>Street_Address</relationshipName>
    <type>Lookup</type>
</CustomField>