force-app/main/default/objects/Street_Address__c/fields/GC_Address_1__c.field-meta.xml
<CustomField>
    <fullName>GC_Address_1__c</fullName>
    <formula>IF(Find(&quot;,&quot;, SF_Address__c) &gt; 0, LEFT( SF_Address__c ,Find(&quot;,&quot;, SF_Address__c)-1), SF_Address__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Address 1</label>
    <type>Text</type>
</CustomField>