force-app/main/default/objects/Street_Address__c/fields/GC_Address_2__c.field-meta.xml
<CustomField>
    <fullName>GC_Address_2__c</fullName>
    <formula>IF(Find(&quot;,&quot;, SF_Address__c) &gt; 0, RIGHT(SF_Address__c, LEN(SF_Address__c) - FIND(&quot;,&quot;, SF_Address__c)), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Address 2</label>
    <type>Text</type>
</CustomField>