force-app/main/default/objects/Street_Address__c/fields/SF_Address__c.field-meta.xml
<CustomField>
    <fullName>SF_Address__c</fullName>
    <formula>Donors__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Address</label>
    <type>Text</type>
</CustomField>