force-app/main/default/objects/Street_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donors__c</columns>
    <columns>GC_Address_1__c</columns>
    <columns>GC_Address_2__c</columns>
    <columns>SF_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>